--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,18 +3,23 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
-        "target": "es6",
         "noImplicitAny": true,
+        "target":"es6",
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
         "baseUrl": ".",
+        "lib":[
+            "es2018",
+            "dom"
+        ],
         "paths": {
             "*": [
                 "node_modules/*",
                 "src/types/*"
             ]
-        }
+        },
+        "types":"outlib"
     },
     "include": [
         "src/**/*"
